tests/baselines/reference/enumWithInfinityProperty.errors.txt
enumWithInfinityProperty.ts(2,5): error TS2452: An enum member cannot have a numeric name.


==== enumWithInfinityProperty.ts (1 errors) ====
    enum A {
        Infinity = 1
        ~~~~~~~~
!!! error TS2452: An enum member cannot have a numeric name.
    }
    